--- a/BlazorMovie/BlazorMovie.csproj
+++ b/BlazorMovie/BlazorMovie.csproj
@@ -18,4 +18,12 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.0-rc.2.23480.2" PrivateAssets="all" />
   </ItemGroup>
 
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Components\UIComponents\SearchResultsComponent.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Components\UIComponents\SearchResultsComponent.razor" />
+  </ItemGroup>
+
 </Project>
