Simplified routing from dropdown select in search component

--- a/BlazorMovie/BlazorMovie.csproj
+++ b/BlazorMovie/BlazorMovie.csproj
@@ -29,4 +29,8 @@
     <_ContentIncludedByDefault Remove="Components\UIComponents\SearchResultsComponent.razor" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Components\UIComponents\SearchComponents\" />
+  </ItemGroup>
+
 </Project>
